<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.InscriptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/insc_client"
                android:textColor="#3D3FAC"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="972dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/inscUsernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/insc_username"
                android:ems="10"
                android:hint="@string/insc_username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/inscPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/insc_password"
                android:ems="10"
                android:hint="@string/insc_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/inscEmailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/insc_email"
                android:ems="10"
                android:hint="@string/insc_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/inscPostalAddressET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/insc_postalAddress"
                android:ems="10"
                android:hint="@string/insc_postalAddress"
                android:inputType="textPostalAddress" />


            <EditText
                android:id="@+id/ribET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insc_rib"
                android:autofillHints="@string/insc_rib"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/sexeRG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/manRB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/insc_manRB"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/womanRB"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/insc_womanRB"
                    android:textSize="18sp" />
            </RadioGroup>

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:autofillHints="@string/insc_surname"
                android:ems="10"
                android:hint="@string/insc_surname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/insc_name"
                android:ems="10"
                android:hint="@string/insc_name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="731dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/provider"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="#4C415C"
                android:text="@string/insc_fournisseur"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/subscribe"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="#A07DD1"
                android:text="@string/insc_inscrireBT"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>