<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ma.fstt.marketplace.view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="696dp"
            android:layout_weight="1"
            android:gravity="clip_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvConnexion"
                android:layout_width="match_parent"
                android:layout_height="136dp"
                android:gravity="center"
                android:text="@string/co_connexion"
                android:textColor="#4A1E1E"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="650dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/usernameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insc_username"
                android:autofillHints="@string/insc_username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/insc_password"
                android:autofillHints="@string/insc_password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="723dp"
            android:layout_marginTop="90dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/connexionBT"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="#4C415C"
                android:text="@string/co_connexion"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/inscriptionBT"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#A07DD1"
                android:text="@string/insc_inscrireBT"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>